# find-similar-words

./: .gitignore  Cargo.toml  LICENSE  README.md  rustfmt.toml
.github/workflows/: master.yml  pr-validation.yml
src/: dictionary.rs  iter.rs  language.rs  language_code.rs  language_detection.rs  lib.rs  macros.rs  phoneme.rs  util.rs  word_groups.rs
tests/: create_ipa_dict.rs  find_similar_words.rs  merge_word_groups.rs
