[package]
name = "find-similar-words"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
argparse = "^0.2.2"
espeakng = "^0.1.1"
espeakng-sys = "^0.1.1"
levenshtein = "^1.0.5"
streaming-iterator = { version = "^0.1.5", features = ["std"] }
unicode-segmentation = "^1.9.0"
union-find-rs = "^0.2.1"
whatlang = "^0.16.0"

[dev-dependencies]
rstest = "^0.13.0"
assert_cmd = "^2.0.4"
assert_fs = "^1.0.7"
predicates = "^2.0.3"
